# slop-game

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bevy_game-15bedaf5e3e5964c.js  bevy_game-442d1e1225bdd1ca.js  bevy_game-497b6984c3fdaa38.js  bevy_game-6f3bc1b4ef66200c.js  bevy_game-8aad7a43a7144b86.js  bevy_game-8e5466b8493cf1a2.js  bevy_game-aacf376bec73a1de.js  bevy_game-b987f4b4da93b2df.js  bevy_game-cc84e5fe93cc84b3.js  bevy_game-d87d736d9bc0e067.js  bevy_game-ddc868ee8a0ab9e1.js  bevy_game-e48112e2276bb917.js  bevy_game-e7eb37df90225b6b.js  bevy_game-ede11b4ff2719f87.js  bevy_game-f1042ae918174375.js  index.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  deploy-page.yaml
blender_landscape/: build_scene.py  gaming_landscape.blend
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GAME_DESIGN.md  REVIEW.md
mobile/: Cargo.toml
scripts/: brp-verify.sh  expectations.day-night.txt  expectations.default.txt  expectations.lantern.txt  expectations.menus.txt  expectations.reawaken.txt  review-pr.sh  walkthrough.sh
src/: audio.rs  beacons.rs  camera.rs  daynight.rs  game.rs  game_over.rs  hud.rs  interact.rs  lantern.rs  lib.rs  main.rs  menu.rs  movement.rs  photo.rs  player.rs  poi.rs  reawaken.rs  reveal.rs  save.rs  settings.rs  states.rs  terrain.rs  ui.rs  water.rs  world.rs
src/menu/: main_menu.rs  mod.rs  pause.rs  settings.rs
src/wildlife/: birds.rs  mod.rs
