[package]
name = "bevy_game"
version = "0.1.0"
publish = false
authors = ["Wafflesthecat101"]
edition = "2024"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

# Enables the Bevy Remote Protocol (BRP) server so an external reviewer/tool
# (e.g. bevy_brp_mcp, or plain curl to 127.0.0.1:15702) can introspect the
# running ECS world — resources, entities, components — to verify a change
# does what it intends at runtime, not just that it compiles. Strictly a
# review/CI aid: the shipped game (native + WASM) never enables it, so it adds
# no code or attack surface to release builds. See `docs/REVIEW.md`.
review = [
    "bevy/bevy_remote",
]

# Bevy's default features minus android_shared_stdcxx/android-game-activity
#   (those are covered in the `mobile` crate). This is a 3D game, so the 3D
#   render/UI features are what matter here.
[dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
    "default_app",
    "3d_api",
    "3d_bevy_render",
    "ui_api",
    "ui_bevy_render",
    "bevy_gilrs",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "tonemapping_luts",
    "webgl2",
    "x11",
    "wayland",
] }
# Kept in sync with the `rand` version Bevy itself pulls in (see `bevy_math`)
# to avoid compiling two incompatible major versions of the crate. Used for
# deterministic procedural scattering of world objects.
rand = { version = "0.10" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

# Required to make `rand`/`getrandom` work on wasm.
# getrandom 0.4 selects its wasm backend purely via the `wasm_js` feature
# (no `--cfg getrandom_backend=...` rustflag needed, unlike 0.3).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[build-dependencies]
embed-resource = "3"
